--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -17,6 +17,7 @@ header, footer {
 
 /* Navbar wrapper */
 .navbar {
+  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
